# ml-project

./: .gitignore  ARCHITECTURE.md  GUIA_COMPLETA.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  SUMMARY.md  eventos.json  pyproject.toml  requirements.txt  setup.py
.github/instructions/: ML.instructions.md
Event_extractor/: __init__.py  event_extractor.py
Event_extractor/classifiers/: __init__.py  event_sentiment_classifier.py  event_type_classifier.py
Event_extractor/extractors/: NER_extractor.py  __init__.py  date_extractor.py
Event_extractor/models/: __init__.py  event.py  news.py
Event_extractor/pipeline/: __init__.py  event_pipeline.py
Event_extractor/utils/: __init__.py  text_preprocessor.py
data/: estructure.txt
db-tool/: .env.example  ARCHITECTURE.md  README.md  config.example.yml  docker-compose.yml  pyproject.toml
db-tool/src/: config.py  implementations.py  interfaces.py  models.py  services.py
db-tool/src/db_tool/: cli.py  main.py  progress.py
db-tool/src/loader/: __init__.py  _utils.py  database_loader.py
db-tool/src/progress/: __init__.py  tracker.py
docs/: informe_tecnico.tex  referencias.bib
etl-tool/: README.md  main.py  pyproject.toml  requirements.txt
etl-tool/src/config/: __init__.py  connection.py  gateway.py  logging.py  settings.py
etl-tool/src/connection/: database.py  strings.py
etl-tool/src/container/: app.py  connection.py  gateway.py  logging.py
event-tool/: ARCHITECTURE.md  GUIA_COMPLETA.md.bak  README.md  process_all_news.py
event-tool/Event_extractor/: __init__.py
event-tool/examples/: 01_basic_usage.py  02_component_usage.py  03_reference_date_demo.py  04_extract_from_database.py  05_test_manual_news.py  06_integrated_pipeline_demo.py  07_sentiment_classification_demo.py  08_pipeline_with_sentiment.py  (+1 more)
examples/: 02_component_usage.py  03_reference_date_demo.py  04_extract_from_database.py  05_test_manual_news.py  06_integrated_pipeline_demo.py  07_sentiment_classification_demo.py  08_pipeline_with_sentiment.py  09_pipeline_with_sklearn_demo.py  README.md  basic_usage.py  component_usage.py  data_loader_template.py  reference_date_demo.py  sentiment_classification_demo.py
models/: .gitkeep  README.md  __init__.py  aircraft_forecasting_optuna.ipynb  aircraft_forecasting_optuna.py  aircraft_forecasting_pycaret.ipynb  aircraft_forecasting_pycaret.py  analyse_results.ipynb  config.py  data_loader.py  evaluate.py  example_usage.py  explain_results.md  external_data_loaders.py  features.py  model.py  multimodal_forecasting.py  preprocess_airlines_db.ipynb  preprocess_meteorology_db.ipynb  preprocess_metro_db.ipynb  preprocessing.py  test_basic.py  test_hourly_forecasting.py  train.py  visualize_results.py  visualize_study.py
scr_not_de_telegram/: scrapper.py
video_analysis/: flightaware_scraper.py  opensky_verificator_api.py  process_videos.py  video_analysis.ipynb
(+42 files in other folders)
